Project

General

Profile

Actions

Bug #59174

closed

'radosgw-admin data sync status' doesn't parse error repo entries

Added by Casey Bodley about 1 year ago. Updated about 1 year ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
multisite backport_processed
Backport:
reef
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

the error repo keys were converted to a binary format for resharding support, so they could encode the optional generation number. the 'data sync status' command still tries to prints them as text:

    "recovering_buckets": [
        "<80>\u0001\u0001Z\u0000\u0000\u0000\n\nG\u0000\u0000\u0000\u0006\u0000\u0000\u0000bucketname\u0000\u0000\u0000\u00000\u0000\u0000\u0000bucketid\u0000\u0000\u0000\u0000\u0000<FF><FF><FF><FF>\u0001\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000" 
    ]

Related issues 1 (0 open1 closed)

Copied to rgw - Backport #59273: reef: 'radosgw-admin data sync status' doesn't parse error repo entriesResolvedCasey BodleyActions
Actions #1

Updated by Casey Bodley about 1 year ago

  • Status changed from New to Fix Under Review
  • Assignee set to Casey Bodley
  • Pull request ID set to 50690
Actions #2

Updated by Casey Bodley about 1 year ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59273: reef: 'radosgw-admin data sync status' doesn't parse error repo entries added
Actions #4

Updated by Backport Bot about 1 year ago

  • Tags changed from multisite to multisite backport_processed
Actions #5

Updated by Casey Bodley about 1 year ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF