rgw/admin: 'data sync status' formats binary error repo entries

Fixes: https://tracker.ceph.com/issues/59174

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit 85032c74a42f1b25e8da333a1a44318f378681a9)